--- a/css/dropdownMenu.css
+++ b/css/dropdownMenu.css
@@ -25,10 +25,10 @@
 .dropdown-menu{
     position: absolute;
     background-color: #E54;
-    /* border: 2px solid #333; */
+    border: 2px solid #333;
     top: 38px;
     z-index: 1;
-    width: 117px;
+    /* width: 117px; */
 }
 
 .dropdown-menu::before{
