--- a/css/geral.css
+++ b/css/geral.css
@@ -377,4 +377,21 @@ body{
 }
 
 
+[data-week]::after{
+    display: inline-block;
+    border: 1px solid;
+    content: '';
+    background-color: red;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin-left: 4px;
+}
+
+
+[data-week].open::after{
+    content: '';
+    background-color: #3f4;
+
+}
 
