--- a/css/geral.css
+++ b/css/geral.css
@@ -395,3 +395,15 @@ body{
 
 }
 
+.moeda{
+    height: 20px;
+    width: 20px;
+    display: inline;
+}
+
+.btc{
+    background-color: #3f4;
+    padding: .2rem .5rem;
+    font-weight: bold;
+    border-radius: 2px;
+}
